Eslinter introduced. Code cleanup. Creation date added to task

--- a/app/components/tasks-list/tasks-list.scss
+++ b/app/components/tasks-list/tasks-list.scss
@@ -33,7 +33,12 @@
         padding: 0 0 0 10px;
       }
     }
+
+    .task-date {
+      float: right;
+      font-size: 12px;
+      font-style: italic;
+      margin: -20px 10px;
+    }
   }
-
-
 }
