--- a/app/components/tasks-list/tasks-list.scss
+++ b/app/components/tasks-list/tasks-list.scss
@@ -1,10 +1,18 @@
 @import "../_common";
 
-.task-container {
+.tasks-list {
   text-align: center;
   margin: 20px;
 
+  .tasks-filters {
+    font-size: 16px;
+    width: $main-width;
+    margin-bottom: 15px;
+    display: inline-block;
+  }
+
   .task-card {
+    margin-bottom: 8px;
     text-align: left;
     width: $main-width;
     display: inline-block;
