--- a/app/components/new-task/new-task.scss
+++ b/app/components/new-task/new-task.scss
@@ -39,9 +39,13 @@
       text-align: left;
     }
 
-    .new-task-button {
-      margin: 10px;
-      float: right;
+    .new-task-form-actions {
+
+      .new-task-action-button {
+        float: right;
+        margin: 10px;
+      }
     }
+
   }
 }
